--- a/app/views/main.html
+++ b/app/views/main.html
@@ -7,8 +7,10 @@
   <button ng-click="deleteFeed(feed)">Delete</button>
   <hr />
 </div>
-<div>
-  URL: <input size="80" ng-model="newFeed.url">
-  <button ng-click="addFeed(newFeed)">Add Feed</button>
-</div>
+<form name="newFeed" novalidate>
+  URL: <input size="80" name="url" ng-model="newFeed.url" type="url" required>
+  <button ng-disabled="!newFeed.$valid" ng-click="addFeed(newFeed)">Add Feed</button>
+  <span class="error" ng-show="newFeed.$error.required">Required!</span>
+  <span class="error" ng-show="newFeed.$error.url">Invalid URL format!</span>
+</form>
 <p>Refresh (seconds): <input ng-model="refreshInterval"></p>
